tests for places,profile,login

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,3 +5,9 @@
 <div class="button">
     <a href="users/login" class="btn">login</a>
 </div>
+<div class="button">
+    <a href="places/profile" class="btn">profile</a>
+</div>
+<div class="button">
+    <a href="places/" class="btn">places</a>
+</div>
